--- a/Slides/lecture03.tex
+++ b/Slides/lecture03.tex
@@ -1,6 +1,6 @@
 \input{preamble}
 
-\title{Session III:\\External Validity}
+\title{Session III\\External Validity}
 
 % external validity
 % sample-related
