post lecture 1 pdf

--- a/Slides/lecture01.tex
+++ b/Slides/lecture01.tex
@@ -674,7 +674,7 @@ An experimental data structure looks like:
 
 Stata:\small
 \begin{verbatim}
-ttest outcome treatment
+ttest outcome, by(treatment)
 reg outcome i.treatment
 \end{verbatim}
 
